[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://TileSets/DungeonTileSets/horizontal_door_x2.png" type="Texture" id=2]
[ext_resource path="res://TileSets/DungeonTileSets/vertical_door_flip_x2.png" type="Texture" id=3]
[ext_resource path="res://Tilemaps/Tilesets/DungeonTileset.tres" type="TileSet" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.3843, 0.930176 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.08158, 16.1696 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.3843, 14.8817 )

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShapeBottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1.3411e-007, 2.57567 )
shape = SubResource( 1 )

[node name="CollisionShapeTop" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.184029, -28.8929 )
shape = SubResource( 1 )

[node name="CollisionShapeOpen" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -21.6786, 16.7419 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShapeTransporter" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.214645, -13.093 )
shape = SubResource( 3 )

[node name="DoorClosed" type="Sprite" parent="."]
position = Vector2( 0.128784, -12.653 )
texture = ExtResource( 2 )

[node name="DoorOpened" type="Sprite" parent="."]
visible = false
position = Vector2( -22.9232, 16.4411 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
